Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47023

[Regression] Windows: Crash in QApplication constructor when using wide main passing a fake argv array (console application)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.1
    • 5.5.0
    • Core: Other
    • None
    • Visual C++ 2010, Windows 7 64bit
    • f9489d08a52fd1f52fcf768d43c58c5cda4f25 (qtbase/5.5, 14.7.2015, 5.5.1)

      In Visual C++ __argv may be null if the entry point of the application is a wide main.
      This is not checked in qcoreapplication.cpp:isArgvModified when the passed argc and argv are custom strings.
      So this results in a crash at qcoreapplication.cpp:411

      This didn't happen in 5.4.1

        1. Qt5Test.zip
          0.6 kB
          Thomas
        2. qtbug47023_stack.txt
          2 kB
          Friedemann Kleint
        3. qtbug47023.zip
          2 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qbprog Thomas
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes