Windows: Fix crash when using wmain() and passing a fake argv.

Return true from isArgvModified() when  __argv is null (as is the
case when using wmain()) indicating arguments are modified.

Task-number: QTBUG-47023
Task-number: QTBUG-30330
Change-Id: I44329ed3369cd4db79ba1b7c19303895f67b1616
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: f1f9489d08a52fd1f52fcf768d43c58c5cda4f25 https://github.com/qt/qtbase/commit/f1f9489d08a52fd1f52fcf768d43c58c5cda4f25