src/corelib/kernel/qcoreapplication.cpp
@@ -1724,6 +1724,10 @@ condition|(
 name|__argc
 operator|!=
 name|argc
+operator|||
+operator|!
+name|__argv
+comment|/* wmain() */
 condition|)
 return|return
 literal|true
